Fix large padding on mobile viewing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,12 @@ body[data-theme="dark"] img.ioda {
     }
 }
 
+@media only screen and (max-width: 640px) {
+    .w {
+        padding: 2rem;
+    }
+}
+
 html,
 body {
     background: #FFFDF7
